# xmz-test-shiftregisters

./: Cargo.toml
src/: errors.rs  main.rs  shift_register.rs
